--- a/src/pages/Works/Detail/style/style.module.css
+++ b/src/pages/Works/Detail/style/style.module.css
@@ -136,5 +136,16 @@
     }
     .profileText .articleInfo .describe {
         font-size: 13px;
+        width: calc(100vw - 30px);
+    }
+    .socialWrapper {
+        width: calc(100vw - 30px);
+    }
+    .social {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        max-width: calc(100vw - 160px);
+        color: #000000;
     }
 }
